# Dating

./: .gitignore  LICENSE  README.MD
.github/workflows/: backend_CI.yml
backend/: pyproject.toml
backend/src/dating/: dependencies.py  schema.py
backend/src/dating/chats/: crud.py  exceptions.py  router.py  schema.py  service.py
backend/src/dating/main/: api.py
backend/src/dating/messages/: crud.py  exceptions.py  router.py  schema.py  service.py
backend/src/dating/notifications/: schema.py  service.py
backend/src/dating/users/: crud.py  dependencies.py  exceptions.py  router.py  schema.py  security.py  service.py
backend/tests/: conftest.py
backend/tests/test_endpoints/: test_stub.py
backend/tests/test_users/: test_endpoints.py
client/: .eslintrc.cjs  App.tsx  app.json  babel.config.js  package-lock.json  package.json  pnpm-lock.yaml  prettier.config.js  tailwind.config.ts  tsconfig.json
client/src/app/: globals.css  layout.tsx  page.tsx
client/src/components/: hero.tsx
